--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+appdirs==1.4.3
 aspy.yaml==1.2.0
+astroid==2.2.5
 attrs==19.1.0
+black==19.3b0
 certifi==2019.3.9
 cfgv==1.6.0
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
 dash==0.43.0
 dash-core-components==0.48.0
 dash-html-components==0.16.0
@@ -17,16 +21,20 @@ identify==1.4.2
 idna==2.8
 importlib-metadata==0.11
 ipython-genutils==0.2.0
+isort==4.3.20
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jsonschema==3.0.1
 jupyter-core==4.4.0
+lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
 nbformat==4.4.0
 nodeenv==1.3.3
 plotly==3.10.0
 pre-commit==1.16.1
 Pygments==2.4.0
+pylint==2.3.1
 pyrsistent==0.15.1
 pytz==2019.1
 PyYAML==5.1
@@ -35,8 +43,10 @@ retrying==1.3.3
 six==1.12.0
 toml==0.10.0
 traitlets==4.3.2
+typed-ast==1.4.0
 urllib3==1.24.3
 virtualenv==16.5.0
 waitress==1.3.0
 Werkzeug==0.15.2
+wrapt==1.11.1
 zipp==0.5.0
