--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,9 @@ mccabe==0.6.1
 more-itertools==7.0.0
 nbformat==4.4.0
 nodeenv==1.3.3
+numpy==1.16.4
 packaging==19.0
+pandas==0.24.2
 percy==2.0.2
 plotly==3.10.0
 pluggy==0.12.0
@@ -53,6 +55,7 @@ pyrsistent==0.15.1
 pytest==4.6.3
 pytest-mock==1.10.4
 pytest-sugar==0.9.2
+python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1
 requests==2.21.0
