:sparkles: watch markdown files for reloader

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_third_party = dash,dash_core_components,dash_html_components,flask,plotly
+known_third_party = dash,dash_core_components,dash_html_components,flask,numpy,pandas,plotly
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
