--- a/requirements.txt
+++ b/requirements.txt
@@ -13,16 +13,17 @@ chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 cryptography==2.7
-dash==1.1.1
-dash-core-components==1.1.1
-dash-html-components==1.0.0
-dash-renderer==1.0.0
-dash-table==4.1.0
+dash==1.2.0
+dash-core-components==1.1.2
+dash-html-components==1.0.1
+dash-renderer==1.0.1
+dash-table==4.2.0
 decorator==4.4.0
-Flask==1.0.2
+Flask==1.1.1
 Flask-Compress==1.4.0
+future==0.17.1
 gunicorn==19.9.0
-git+ssh://git@gitlab.hevaweb.com/data_science/plotly-heva-theme.git@v1.1.0#egg=heva-theme
+heva-theme==1.1.0
 identify==1.4.2
 idna==2.8
 importlib-metadata==0.18
@@ -39,16 +40,16 @@ mccabe==0.6.1
 more-itertools==7.0.0
 nbformat==4.4.0
 nodeenv==1.3.3
-numpy==1.17.0
+numpy==1.17.1
 packaging==19.0
-pandas==0.25.0
+pandas==0.25.1
 percy==2.0.2
 plotly==4.1.0
 pluggy==0.12.0
 pre-commit==1.16.1
 py==1.8.0
 pycparser==2.19
-Pygments==2.4.0
+Pygments==2.4.2
 pylint==2.3.1
 pyOpenSSL==19.0.0
 pyparsing==2.4.0
@@ -72,6 +73,6 @@ urllib3==1.24.3
 virtualenv==16.5.0
 waitress==1.3.0
 wcwidth==0.1.7
-Werkzeug==0.15.2
+Werkzeug==0.15.5
 wrapt==1.11.1
 zipp==0.5.0
