--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ lxml==4.3.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.0.0
+mypy==0.720
+mypy-extensions==0.4.1
 nbformat==4.4.0
 nodeenv==1.3.3
 numpy==1.17.1
@@ -69,6 +71,7 @@ termcolor==1.1.0
 toml==0.10.0
 traitlets==4.3.2
 typed-ast==1.4.0
+typing-extensions==3.7.4
 urllib3==1.24.3
 virtualenv==16.5.0
 waitress==1.3.0
