--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,34 @@
 appdirs==1.4.3
-asn1crypto==0.24.0
-aspy.yaml==1.2.0
-astroid==2.2.5
-atomicwrites==1.3.0
-attrs==19.1.0
-beautifulsoup4==4.7.1
-black==19.3b0
-certifi==2019.3.9
-cffi==1.12.3
-cfgv==1.6.0
-chardet==3.0.4
+attrs==19.3.0
+black==19.10b0
 Click==7.0
-colorama==0.4.1
-cryptography==2.7
-dash==1.3.0
-dash-core-components==1.2.0
+dash==1.5.1
+dash-core-components==1.4.0
 dash-html-components==1.0.1
-dash-renderer==1.1.0
-dash-table==4.3.0
-decorator==4.4.0
+dash-renderer==1.2.0
+dash-table==4.5.0
 Flask==1.1.1
 Flask-Compress==1.4.0
-future==0.17.1
+future==0.18.1
 gunicorn==19.9.0
 heva-theme==1.1.1
-identify==1.4.2
-idna==2.8
-importlib-metadata==0.18
-ipython-genutils==0.2.0
-isort==4.3.20
+isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==3.0.1
-jupyter-core==4.4.0
-lazy-object-proxy==1.4.1
-lxml==4.3.4
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==7.0.0
-mypy==0.720
-mypy-extensions==0.4.1
-nbformat==4.4.0
-nodeenv==1.3.3
-numpy==1.17.1
-packaging==19.0
-pandas==0.25.1
-percy==2.0.2
-plotly==4.1.1
-pluggy==0.12.0
-pre-commit==1.16.1
-py==1.8.0
-pycparser==2.19
-Pygments==2.4.2
-pylint==2.3.1
-pyOpenSSL==19.0.0
-pyparsing==2.4.0
-pyrsistent==0.15.1
-pytest==4.6.3
-pytest-mock==1.10.4
-pytest-sugar==0.9.2
+mypy==0.740
+mypy-extensions==0.4.3
+numpy==1.17.3
+pandas==0.25.2
+pathspec==0.6.0
+plotly==4.2.1
 python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1.2
-requests==2.21.0
+pytz==2019.3
+regex==2019.8.19
 retrying==1.3.3
-selenium==3.141.0
 six==1.12.0
-soupsieve==1.9.2
-termcolor==1.1.0
 toml==0.10.0
-traitlets==4.3.2
 typed-ast==1.4.0
-typing-extensions==3.7.4
-urllib3==1.24.3
-virtualenv==16.5.0
-waitress==1.3.0
-wcwidth==0.1.7
-Werkzeug==0.15.5
-wrapt==1.11.1
-zipp==0.5.0
+typing-extensions==3.7.4.1
+waitress==1.3.1
+Werkzeug==0.16.0
