--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [isort]
-known_third_party = dash,dash_core_components,dash_html_components,dash_table,flask,heva_theme,numpy,pandas,plotly,rgpd_dash
+known_third_party = dash,dash_core_components,dash_html_components,dash_table,flask,heva_theme,numpy,pandas,plotly,rgpd_dash,toml
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
@@ -7,7 +7,7 @@ combine_as_imports=True
 line_length=88
 
 [mypy]
-python_version = 3.6
+python_version = 3.7
 warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
