:lipstick: use plotly theme & fix titles types

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [isort]
-known_third_party = dash,dash_core_components,dash_html_components,dash_table,flask,heva_theme,numpy,pandas,plotly,rgpd_dash,toml
+known_third_party = dash,dash_core_components,dash_html_components,dash_table,flask,heva_theme,pandas,rgpd_dash,toml
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
