:wrench: add flake8 conf
+ flake8 compliance

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,10 @@ warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
 
+[flake8]
+extend-ignore = E203, E501, W503
+max-complexity = 10
+exclude =
+    .venv/
+    venv/
+
