--- a/reqs/base.in
+++ b/reqs/base.in
@@ -1,7 +1,9 @@
 dash>=1.13.0, <2.0.0
+dash_auth>=1.3.2, <2.0.0
 gunicorn==19.10.0
 heva-theme
 pandas>=1.0.5, <2.0.0
 rgpd-dash
-toml
+pydantic
+python-dotenv
 pip-tools
