--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,4 @@
-image: gitlab.hevaweb.com:4567/heva/docker-images/php-node-deployer:php7.2-node10LTS
-
 include:
-  - project: 'devops/ci-templates'
+  - project: 'hevaweb/web/devops/ci-templates'
     ref: master
-    file: '/api-templates.yml'
-
-cache:
-  paths:
-    - .env
-    - assets/style.css
-
-stages:
-  - build
-  - deploy
-
-build:
-  except:
-    - tags
-  stage: build
-  script:
-    - yarn
-    - yarn build
-
-deploy:
-  except:
-    - tags
-  extends: .deploy
-  before_script:
-    - echo "Deploy branch:$CI_COMMIT_REF_NAME commit:$CI_COMMIT_SHA"
-    - eval $(ssh-agent -s)
-    - ssh-add <(echo "$SSH_HEVA_DASHBOARD_KEY")
-    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
-    - echo "SSH Key installed"
-  script:
-    - echo "Deploy to production"
-    - cp $ENVS .env || true
-    - dep deploy production
-  environment:
-    name: ${CI_PROJECT_NAME}
-    url: http://${CI_PROJECT_NAME}.hevaweb.com
+    file: '/kube/artemis-jobs.yml'
